fix time alignment
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@27749 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_course-assessment.scss
+++ b/src/main/resources/scss/_course-assessment.scss
@@ -85,6 +85,7 @@
 
 				time {
 					float: right;
+					width: 5em;//allow this to line up as if it were a 'left aligned column'.
 					color: $tertiary-grey;
 					font: normal 300 1em/3 $font;
 				}
